tests/snapshots/integration__integration_tests__list__with_remotes_filters_worktrees.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--remotes"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m                 [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m                          [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1mmain[0m                       [2m^[0m                          [1m./repo[0m                         [32m⇡0[0m  [2m[31m⇣0[0m  [2mb834638e[0m  [2m10mo[0m  [2mInitial commit[0m
+ [2mfeature-with-worktree[0m     [2m_[0m                           [2m./repo.feature-with-worktree[0m           [2mb834638e[0m  [2m10mo[0m  [2mInitial commit[0m
  [2morigin/remote-only[0m        [2m_[0m  [2m⎇[0m                                                               [2mb834638e[0m  [2m10mo[0m  [2mInitial commit[0m

⚪ [2mShowing 2 worktrees, 1 remote branches[0m
