tests/snapshots/integration__integration_tests__list__with_user_status.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m             [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m                      [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1mmain[0m                   [2m^[0m                          [1m./repo[0m                             [2mf0879504[0m  [2m1d[0m    [2mInitial commit[0m
+ [2mclean-no-status[0m       [2m_[0m                           [2m./repo.clean-no-status[0m             [2mf0879504[0m  [2m1d[0m    [2mInitial commit[0m
+ [2mclean-with-status[0m     [2m_[0m   💬                      [2m./repo.clean-with-status[0m           [2mf0879504[0m  [2m1d[0m    [2mInitial commit[0m
+ dirty-no-status     [36m![0m           [32m+1[0m   [31m-1[0m           ./repo.dirty-no-status             [2mf0879504[0m  [2m1d[0m    [2mInitial commit[0m
+ [2mdirty-with-status[0m    [36m?[0m[2m_[0m   🤖                      [2m./repo.dirty-with-status[0m           [2mf0879504[0m  [2m1d[0m    [2mInitial commit[0m

⚪ [2mShowing 5 worktrees, 1 with changes[0m
